chore(phase2): mark phase1 complete, start phase2 weekly planning, and ignore local runtime artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ __pycache__/
 
 # Local runtime artifacts
 .synora/
+.synora*/
+.synora*/logs/
+.synora*/logs/*.log
 
 # Test artifacts
 .pytest_cache/
